[package]
name = "sqlite-uuid"
version = "0.2.6"
edition = "2021"
license = "MIT"
description = "Plugin to add support for uuids in sqlite"
repository = "https://github.com/woile/sqlite-uuid"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlite-loadable = "0.0.6-alpha.6"
uuid = { version = "1.7.0", features = ["std", "v7", "v4"] }

[lib]
crate-type=["cdylib"]
